--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="top-container">
     <img class="top-cloud" src="images/cloud.png" alt="cloud-img">
     <h1>I'm Vid Barbaro,</h1>
-    <h2>a <span class="pro">pro</span>grammer.</h2>
+    <h2>a ICT student.</h2>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
     <img src="images/mountain.png" alt="mountain-img">
   </div>
@@ -22,28 +22,33 @@
     <div class="profile">
       <img src="images/boy.png" alt="profile picture">
       <h2>Hello.</h2>
-      <p>My name is Vid Barbaro. I am an Infrastructure Engineering student born in Croatia and taught in the Netherlands.</p>
+      <p>My name is Vid Barbaro. I am an 18 year old Infrastructure Engineering student born in Croatia and taught in Eindhoven, Netherlands.</p>
     </div>
     <hr>
     <div class="skills">
       <h2>My Skills.</h2>
-      <div class="skill-row">
-        <img class="computer-img" src="https://media.giphy.com/media/d8d7kW0JUCUDwHpDsk/giphy.gif" alt="">
-        <h3>Python programming and Web Development</h3>
-        <p>Currently I am learning Python for application/game building and HTML, CSS & Javascript for web development.</p>
+      <div class="skill-row-left">
+        <img class="left-img" src="https://media.giphy.com/media/WFZvB7VIXBgiz3oDXE/giphy.gif" alt="">
+        <h3>Python programming</h3>
+        <p>I am currently learning Python through application and game development, but once I get really comfortable with the language my plan is to transition to writing scripts and automation programs. I have a lot of fun exploring Python.</p>
       </div>
-      <div class="skill-row">
-        <img class="travel-img" src="images/travel.png" alt="">
-        <h3>Travelling around the world</h3>
-        <p>I have travelled to a lot of European countries and explored their beauties. Now i wish to go somewhere a bit further.</p>
+      <div class="skill-row-right">
+        <img class="right-img" src="https://media.giphy.com/media/lr1QZ7prMwwkqSSVLa/giphy.gif" alt="">
+        <h3>Web Development</h3>
+        <p>In parallel with learning Python I am learning HTML, CSS and Javascript for web development so I can promote myself on the web as well as have more skills that will attract employers(and it's fun).</p>
+      </div>
+      <div class="skill-row-left">
+        <img class="left-img" src="images/linux.png" alt="">
+        <h3>Using Linux</h3>
+        <p>In the last few months I have taught myself to use Linux and OSs that are Linux like. Only after I started getting used to it could I see the advantages over it's competitiors (Windows).</p>
       </div>
     </div>
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
       <h3>If you are interested in having an interview or recruiting me.</h3>
-      <p>We can just chill and talk while having a pizza and a beer.</p>
-      <a class="btn" href="vid.barbaro@gmail.com">CONTACT ME</a>
+      <p>We can get in contact and organise an online or live meet for an interview/questioning.</p>
+      <a class="btn" href="mailto:vid.barbaro@gmail.com">CONTACT ME</a>
     </div>
   </div>
 
@@ -52,7 +57,7 @@
     <a class="footer-link" href="https://www.linkedin.com/in/vid-barbaro-7943b9199/">LinkedIn</a>
     <a class="footer-link" href="https://www.instagram.com/vidbarbaro/">Instagram</a>
     <a class="footer-link" href="https://www.facebook.com/vid.barbaro">Facebook</a>
-    <p>© 2020 Vid Barbaro.</p>
+    <p class="copyright">© 2020 Vid Barbaro.</p>
   </div>
 </body>
 </html>
